M2K-kitchensink/kitchensink-app/deploy/yamls/kitchensink-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: kitchensink
  name: kitchensink
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: kitchensink
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: kitchensink
      name: kitchensink
    spec:
      containers:
        - image: quay.io/btenneti/kitchensink:latest
          imagePullPolicy: Always
          name: kitchensink
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
