M2K-kitchensink/kitchensink-app/deploy/yamls/kitchensink-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: kitchensink
  name: kitchensink
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: kitchensink
  type: ClusterIP
status:
  loadBalancer: {}
