M2K-kitchensink/kitchensink-app/deploy/yamls/kitchensink-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: kitchensink-app
  name: kitchensink-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kitchensink
                port:
                  number: 8080
            path: /kitchensink
            pathType: Prefix
status:
  loadBalancer: {}
